Fixing Themes (in progress)

--- a/docs/views/panels.html
+++ b/docs/views/panels.html
@@ -20,7 +20,7 @@
 <div ng-repeat="alert_class in ['', 'primary', 'secondary', 'light', 'dark', 'success', 'warning', 'failure']" class="alert {{alert_class}}">
     <div class="alert-exit">x</div>
     <strong>alert {{alert_class}}</strong>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, itaque, consequuntur, similique natus soluta harum debitis ipsam mollitia labore fuga suscipit quidem amet totam commodi aspernatur. Dolore, nostrum facere qui.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, itaque, consequuntur, similique natus soluta harum debitis ipsam mollitia labore fuga <a href="#">suscipit</a> quidem amet totam commodi aspernatur. Dolore, nostrum facere qui.</p>
 </div>
 
 <h2>Modals</h2>
