Fixing themes (continued)

--- a/docs/views/panels.html
+++ b/docs/views/panels.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="overlay" ng-show="component.panels.modal.show">
-    <div class="modal">
+    <div class="panel modal">
         <div class="panel-header">
             <h3>Modal Header</h3>
         </div>
