--- a/scss/modules/themes/_classes.scss
+++ b/scss/modules/themes/_classes.scss
@@ -2,24 +2,12 @@
 // Themes Classes
 // ==============
 
-.theme-dark {
-    @extend %theme-dark;
-
-    .theme-light { @extend %theme-light; }
-}
-
-.theme-light {
-    @extend %theme-light;
-
-    .theme-dark { @extend %theme-dark; }
-}
-
 // Theme Classes
 @each $theme-color in $theme-colors {
     $name: nth($theme-color, 1);
 
     .theme-#{$name} {
-        @extend %theme-#{$name};
+        &, [class*="theme-"] & { @extend %theme-#{$name}; }
     }
 
     .color-#{$name} {
