--- a/scss/modules/nav/_components.scss
+++ b/scss/modules/nav/_components.scss
@@ -2,12 +2,7 @@
 // Nav Components
 // =================
 
-%nav, %nav-vertical {
-	%nav-header {
-		padding: $nav-header-padding;
-		margin: 0;
-	}
-
+%nav {
 	ul {
 		list-style: none;
 		margin-left: 0;
@@ -38,17 +33,20 @@
 			}
 		}
 	}
+}
 
-	%nav-separator {
-		border-bottom-width: $nav-separator-width;
-		border-bottom-style: solid;
-		margin: $nav-separator-margin;
-	}
+%nav-header {
+	padding: $nav-header-padding;
+	margin: 0;
+}
+
+%nav-separator {
+	border-bottom-width: $nav-separator-width;
+	border-bottom-style: solid;
+	margin: $nav-separator-margin;
 }
 
 %nav-horizontal {
-	@extend %nav;
-
 	> ul {
 		@extend %clearfix;
 		height: 100%;
@@ -67,95 +65,89 @@
 		}
 	}
 
-	%nav-horizontal-separator {
-		// TODO: implement
-	}
+}
 
-	%nav-horizontal-full {
-		height: 100%;
-	}
+%nav-horizontal-separator {
+	// TODO: implement
+}
+
+%nav-horizontal-full {
+	height: 100%;
 }
 
 // Dropdown Components
+// -------------------
 %dropdown-container {
-	@extend %nav-vertical;
 	display: inline-block;
 	overflow: visible;
+}
 
-	%dropdown {
-		@include type-scale($dropdown-scale);
-		min-width: $dropdown-min-width;
-		position: absolute;
-		z-index: $dropdown-z-index;
-		padding: $dropdown-padding;
-		text-align: $dropdown-text-align;
+%dropdown {
+	@extend %nav;
+	@include type-scale($dropdown-scale);
+	min-width: $dropdown-min-width;
+	position: absolute;
+	z-index: $dropdown-z-index;
+	padding: $dropdown-padding;
+	text-align: $dropdown-text-align;
 
-		&, & > ul { margin: 0;}
+	&, & > ul { margin: 0;}
 
-		@if $dropdown-radius {
-			@include border-radius($dropdown-radius);
-		}
-
-		&%dropdown-below-left {
-			@include position-absolute(below, left);
-		}
-
-		&%dropdown-below-right {
-			@include position-absolute(below, right);
-		}
-
-		&%dropdown-above-left {
-			@include position-absolute(above, left);
-		}
-
-		&%dropdown-above-right {
-			@include position-absolute(above, right);
-		}
-
-		&%dropdown-top-left {
-			@include position-absolute(top, left);
-		}
-
-		&%dropdown-top-right {
-			@include position-absolute(top, right);
-		}
-
-		&%dropdown-bottom-left {
-			@include position-absolute(bottom, left);
-		}
-
-		&%dropdown-bottom-right {
-			@include position-absolute(bottom, right);
-		}
-
-		&%dropdown-bottom-push-left {
-			@include position-absolute(bottom, $left: 100%);
-		}
-
-		&%dropdown-bottom-push-right {
-			@include position-absolute(bottom, $right: 100%);
-		}
-
-		&%dropdown-top-push-left {
-			@include position-absolute(top, $left: 100%);
-		}
-
-		&%dropdown-top-push-right {
-			@include position-absolute(top, $right: 100%);
-		}
+	@if $dropdown-radius {
+		@include border-radius($dropdown-radius);
 	}
 
-	%dropdown-separator {
-		border-bottom-width: $nav-separator-width;
-		border-bottom-style: solid;
-		margin: $nav-separator-margin;
+	&%dropdown-below-left {
+		@include position-absolute(below, left);
+	}
+
+	&%dropdown-below-right {
+		@include position-absolute(below, right);
+	}
+
+	&%dropdown-above-left {
+		@include position-absolute(above, left);
+	}
+
+	&%dropdown-above-right {
+		@include position-absolute(above, right);
+	}
+
+	&%dropdown-top-left {
+		@include position-absolute(top, left);
+	}
+
+	&%dropdown-top-right {
+		@include position-absolute(top, right);
+	}
+
+	&%dropdown-bottom-left {
+		@include position-absolute(bottom, left);
+	}
+
+	&%dropdown-bottom-right {
+		@include position-absolute(bottom, right);
+	}
+
+	&%dropdown-bottom-push-left {
+		@include position-absolute(bottom, $left: 100%);
+	}
+
+	&%dropdown-bottom-push-right {
+		@include position-absolute(bottom, $right: 100%);
+	}
+
+	&%dropdown-top-push-left {
+		@include position-absolute(top, $left: 100%);
+	}
+
+	&%dropdown-top-push-right {
+		@include position-absolute(top, $right: 100%);
 	}
 }
 
-// Tab Components
-%tabs, %tabs-horizontal {
-	@extend %nav-horizontal;
+%dropdown-separator {
+	border-bottom-width: $nav-separator-width;
+	border-bottom-style: solid;
+	margin: $nav-separator-margin;
 }
-
-
-
