Brought back to a stable state - still working on cleaning up themes

--- a/scss/modules/global/_mixins.scss
+++ b/scss/modules/global/_mixins.scss
@@ -11,11 +11,7 @@
 }
 
 @mixin theme($color) {
-    @if is-dark($color) {
-        @extend %color-dark;
-    } @else {
-        @extend %color-light;
-    }
+    @include foreground-color($color);
 
     background-color: $color;
 }
